before changing to int actions