@@ -4,6 +4,7 @@ import java.util.*;
 
 public class Session {
 
+	private final static int MAX_CASES = 100;
 	private Joueur joueur;
 	private int score;
 	private Case caseCourante;
@@ -14,40 +15,74 @@ public class Session {
 	
 	// Constructors
 	public Session(Joueur joueur) {
-		plateau.addFirst(new CaseFin());
-		for(int i = 1; i<62; i++) {
-			plateau.addFirst(randomCase());
-		}
-		plateau.addFirst(new CaseDepart());
+		initPlateau();
 		this.joueur = joueur;
 		score = 0;
-		caseCourante = plateau.getFirst();
+		caseCourante = plateau.get(0);
 		finPartie = false;
 	}
 	
 	// getter/setter
 	
+	public static int getMaxCases() {
+		return MAX_CASES;
+	}
 	
 	
 	// methods
-	private Case randomCase() {
+	private void initPlateau() {
+		plateau = new ArrayList<Case>(MAX_CASES - 1); // les indices commence de 0
+		plateau.set(0, new CaseDepart(0));
+		plateau.set(MAX_CASES - 1, new CaseFin(MAX_CASES));
 		Random r = new Random();
-		switch (r.nextInt(5) + 1) {
+		int randomInt = 0;
+		for(int i = 0; i<5; ++i) {
+			while(plateau.get(randomInt) != null) {
+				randomInt = r.nextInt(MAX_CASES - 2) + 1;
+			}
+			while(plateau.get(randomInt) != null) {
+				randomInt = r.nextInt(MAX_CASES - 2) + 1;
+			}
+			plateau.set(randomInt, new CaseMalus(randomInt + 1));
+			while(plateau.get(randomInt) != null) {
+				randomInt = r.nextInt(MAX_CASES - 2) + 1;
+			}
+			plateau.set(randomInt, new CaseQuestion.genQuestionDefinition(randomInt + 1));
+			while(plateau.get(randomInt) != null) {
+				randomInt = r.nextInt(MAX_CASES - 2) + 1;
+			}
+			plateau.set(randomInt, new CaseQuestion.genQuestionImage(randomInt + 1));
+			while(plateau.get(randomInt) != null) {
+				randomInt = r.nextInt(MAX_CASES - 2) + 1;
+			}
+			plateau.set(randomInt, new CaseSaut(randomInt + 1));
+		}
+		for(int i = 1; i<MAX_CASES - 1; i++) {
+			if(plateau.get(i) != null)
+				plateau.set(i, randomCase(i + 1));
+		}
+	}
+	private Case randomCase(int num) {
+		Random r = new Random();
+		switch (r.nextInt(6) + 1) {
 			case 1:
-				return new CaseParcourt();
+				return new CaseParcours(num);
 			case 2:
-				return new CaseBonus();
+				return new CaseBonus(num);
 			case 3:
-				return new CaseMalus();
+				return new CaseMalus(num));
 			case 4:
-				return CaseQuestion.genQuestion();
+				return CaseQuestion.genQuestionDefinition(num);
 			case 5:
-				return new CaseSaint();
+				return CaseQuestion.genQuestionImage(num);
+			case 6:
+				return new CaseSaut(num);
 			default:
 				return null;
 		}
 	}
-	private boolean finished() {
+	
+	public boolean finished() {
 		return finPartie;
 	}
 	private boolean verifierCaseChoisie(Case caseDes, Case choixJoueur) {
@@ -56,12 +91,12 @@ public class Session {
 	public Case avancer(Case c) { // avance a c et retourne a quelle case il va etre dirige ( peut etre null)
 		// fonction pour avancer graphiquement
 		caseCourante = c;
-		if(c == plateau.get(63))
+		if(c == plateau.get(MAX_CASES - 1))
 			finPartie = true;
-		c.changerScore();
-		c.changerCase();
-		return c.action();
+		score += c.changerScore();
+		return c.action(plateau);
 	}
+
 	public void jouer(Case c) {
 		if(c == null)
 			return;
@@ -74,8 +109,17 @@ public class Session {
 			// message d'erreur
 			jouer(c);
 		}
-		
 	}
+	
+	public void tour_a_rouler() { // in main while not finPartie() on fait tour a rouler
+		int nbCaseAvancement = dice.rouler();
+		int numCaseCourante = caseCourante.getNum();
+		if(numCaseCourante + nbCaseAvancement > MAX_CASES)
+			jouer(plateau.get(numCaseCourante + (numCaseCourante + nbCaseAvancement - MAX_CASES)));
+		else
+			jouer(plateau.get(numCaseCourante + nbCaseAvancement));
+	}
+	
 	
 	
 }
